--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -12,7 +12,8 @@ input {
   padding: 0.5rem 1rem;
 }
 input,
-label {
+label,
+select {
   display: block;
   width: 100%;
   margin: 0.3rem 0;
@@ -22,4 +23,20 @@ label {
   font-size: 16px;
   font-weight: bold;
   margin-bottom: 8px;
+}
+
+.gender {
+  margin: 2rem 0;
+
+  input,
+  label {
+    width: 50%;
+    float: left;
+    text-align: left;
+  }
+}
+
+#drop-down {
+  margin-bottom: 1rem;
+  padding: 0.5rem 0;
 }
