fix some error and add javascript

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -32,14 +32,17 @@ select {
 .gender {
   margin: 2rem 0;
 }
-.gender input,
+.gender input {
+  width: auto;
+  display: inline-block;
+}
 .gender label {
-  width: 50%;
-  float: left;
-  text-align: left;
+  display: inline-block;
+  width: auto;
+  margin: 0 2rem 0 0.3rem;
 }
 
-#drop-down {
+#drop_down {
   margin-bottom: 1rem;
   padding: 0.5rem 0;
 }/*# sourceMappingURL=style.css.map */
